--- a/app/src/main/res/drawable/fondoh_lvl_2_5.xml
+++ b/app/src/main/res/drawable/fondoh_lvl_2_5.xml
@@ -8,15 +8,15 @@
         android:translateY="-9.219699">
         <path
             android:pathData="M50.176336 9.6246986h28.25372c1.570491 0 2.834821 1.2643304 2.834821 2.8348214v28.537198c0 1.570491 -1.26433 2.834821 -2.834821 2.834821h-28.25372c-1.570491 0 -2.834821 -1.26433 -2.834821 -2.834821V12.45952c0 -1.570491 1.26433 -2.8348214 2.834821 -2.8348214z"
-            android:fillColor="@color/focus_lvl_2"
+            android:fillColor="?attr/fill_lvl_2"
             android:fillAlpha="1"
-            android:strokeColor="#000000"
+            android:strokeColor="?attr/cell_border"
             android:strokeAlpha="1"
             android:strokeWidth="0.81"
             android:strokeLineCap="square"
             android:strokeLineJoin="bevel" />
         <path
             android:pathData="M50.565588 16.961178l0.458887 -4.502051h4.626074v1.060401h-3.65249l-0.272852 2.461865q0.663526 -0.390674 1.506885 -0.390674 1.234033 0 1.959571 0.818555 0.725537 0.812353 0.725537 2.201416 0 1.395263 -0.756543 2.201416 -0.750342 0.799951 -2.102198 0.799951 -1.196826 0 -1.953369 -0.663526 -0.756543 -0.663525 -0.861963 -1.835546h1.085205q0.10542 0.775146 0.551905 1.172021 0.446484 0.390674 1.178222 0.390674 0.799952 0 1.252637 -0.545703 0.458887 -0.545703 0.458887 -1.506885 0 -0.905371 -0.496094 -1.451074 -0.489892 -0.551905 -1.308447 -0.551905 -0.750342 0 -1.178223 0.328663l-0.303857 0.248046z"
-            android:fillColor="#000000" />
+            android:fillColor="?attr/cell_txt" />
     </group>
 </vector>
