--- a/app/src/main/res/drawable/focused_lvl_1.xml
+++ b/app/src/main/res/drawable/focused_lvl_1.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="2dp"
-        android:color="@color/borderColor" />
+        android:color="?attr/cell_border" />
     <padding
         android:left="0dp"
         android:top="0dp"
         android:right="0dp"
         android:bottom="0dp" />
     <solid
-        android:color="@color/focus_lvl_1" />
+        android:color="?attr/fill_lvl_1" />
 </shape>
