--- a/app/src/main/res/drawable/fondoH_lvl_0_12.xml
+++ b/app/src/main/res/drawable/fondoH_lvl_0_12.xml
@@ -8,18 +8,18 @@
         android:translateY="-9.219699">
         <path
             android:pathData="M50.176336 9.6246986h28.25372c1.570491 0 2.834821 1.2643304 2.834821 2.8348214v28.537198c0 1.570491 -1.26433 2.834821 -2.834821 2.834821h-28.25372c-1.570491 0 -2.834821 -1.26433 -2.834821 -2.834821V12.45952c0 -1.570491 1.26433 -2.8348214 2.834821 -2.8348214z"
-            android:fillColor="@color/focus_lvl_0"
+            android:fillColor="?attr/fill_lvl_0"
             android:fillAlpha="1"
-            android:strokeColor="#000000"
+            android:strokeColor="?attr/cell_border"
             android:strokeAlpha="1"
             android:strokeWidth="0.81"
             android:strokeLineCap="square"
             android:strokeLineJoin="bevel" />
         <path
             android:pathData="M52.2213 21.488033h-1.153418v-7.646045l-2.313037 0.849561v-1.041797l3.286621 -1.234033H52.2213Z"
-            android:fillColor="#000000" />
+            android:fillColor="?attr/cell_txt" />
         <path
             android:pathData="M59.827905 21.488033h-5.915918v-0.824756l3.12539 -3.472656q0.694532 -0.787549 0.954981 -1.277441 0.26665 -0.496094 0.26665 -1.023193 0 -0.706934 -0.427881 -1.15962 -0.427881 -0.452685 -1.141015 -0.452685 -0.855762 0 -1.333252 0.489892 -0.471289 0.483692 -0.471289 1.351856h-1.147217q0 -1.246436 0.799951 -2.015381 0.806152 -0.768945 2.151807 -0.768945 1.258838 0 1.990576 0.663525 0.731738 0.657324 0.731738 1.754932 0 1.333252 -1.699121 3.175l-2.418457 2.623095h4.533057z"
-            android:fillColor="#000000" />
+            android:fillColor="?attr/cell_txt" />
     </group>
 </vector>
