--- a/app/src/main/res/drawable/fondoH_lvl_2.xml
+++ b/app/src/main/res/drawable/fondoH_lvl_2.xml
@@ -8,9 +8,9 @@
         android:translateY="-9.219699">
         <path
             android:pathData="M50.176336 9.6246986h28.25372c1.570491 0 2.834821 1.2643304 2.834821 2.8348214v28.537198c0 1.570491 -1.26433 2.834821 -2.834821 2.834821h-28.25372c-1.570491 0 -2.834821 -1.26433 -2.834821 -2.834821V12.45952c0 -1.570491 1.26433 -2.8348214 2.834821 -2.8348214z"
-            android:fillColor="@color/focus_lvl_2"
+            android:fillColor="?attr/fill_lvl_2"
             android:fillAlpha="1"
-            android:strokeColor="#000000"
+            android:strokeColor="?attr/cell_border"
             android:strokeAlpha="1"
             android:strokeWidth="0.81"
             android:strokeLineCap="square"
